namespace ExpenseTrackerGrupo2.Controllers;

public class ExpenseController
{

}
