using ExpenseTrackerGrupo2.Business.Services.Interfaces;

public class UserService : IUserService{
    
}